@@ -119,9 +119,10 @@ add_executable(DumpRenderTree ${DumpRenderTree_SOURCES})
 target_link_libraries(DumpRenderTree ${DumpRenderTree_LIBRARIES})
 set_target_properties(DumpRenderTree PROPERTIES FOLDER "Tools")
 
-add_library(TestNetscapePlugin SHARED ${TestNetscapePlugin_SOURCES})
-target_link_libraries(TestNetscapePlugin ${TestNetscapePlugin_LIBRARIES})
-set_target_properties(TestNetscapePlugin PROPERTIES FOLDER "Tools")
+if (ENABLE_NETSCAPE_PLUGIN_API)
+    add_library(TestNetscapePlugin SHARED ${TestNetscapePlugin_SOURCES})
+    target_link_libraries(TestNetscapePlugin ${TestNetscapePlugin_LIBRARIES})
+endif ()
 
 if (WIN32)
     add_dependencies(DumpRenderTree DumpRenderTreeLib)
