@@ -1,3 +1,12 @@
+2016-07-01  Konstantin Tokarev  <annulen@yandex.ru>
+
+        [cmake] Build TestNetscapePlugin only if NPAPI is enabled.
+        https://bugs.webkit.org/show_bug.cgi?id=159344
+
+        Reviewed by NOBODY (OOPS!).
+
+        * DumpRenderTree/CMakeLists.txt:
+
 2016-05-11  Joanmarie Diggs  <jdiggs@igalia.com>
 
         [GTK] accessibility/aria-readonly.html is failing
